// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preserves disposer 1`] = `
Array [
  Array [],
]
`;

exports[`returns equivalent stream if N is 0 1`] = `
EventsList(
  10: 1
  20: 2
  30: 3
)
`;

exports[`skips first N items 1`] = `
EventsList(
  30: 3
)
`;
